# wss

./: .gitignore  Cargo.toml  Dockerfile  README.md  sonar-project.properties
.github/workflows/: rust.yml
examples/ser_servlet/: Cargo.toml
examples/ser_servlet/src/: client.rs  lib.rs  main.rs
src/: main.rs
src/main/: config.rs  error.rs  helper.rs  io.rs  lib.rs  main.rs  methods.rs  middleware.rs  properties.rs  raw_servlet.rs  router.rs  ser_servlet.rs  server.rs  servlet.rs
src/net/: server.rs
src/resources/: postman_collection.json
