workspace = { members = ["examples/*"] }
[package]
name = "wbsl"
version = "0.0.3"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards Basic Server Library"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wbsl"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wbsl"
exclude = ["src/resources/", ".github/", "sonar-project.properties"]


[lib]
path = "src/main/lib.rs"

[dependencies]
aul = "1.3.1"
whdp = "1.1.10"
wjp = "1.0.2"
wbdl = "1.0.3"


[features]
no-color = ["aul/no-color"]
