workspace = { members = ["examples/*"] }
[package]
name = "wbsl"
version = "0.0.5"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards Basic Server Library"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wbsl"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wbsl"
exclude = ["src/resources/", ".github/", "sonar-project.properties"]


[lib]
path = "src/main/lib.rs"

[dependencies]
aul = "1.3.2"
whdp = "1.2.0"
wjp = "1.1.3"
wbdl = "1.2.0"


[features]
no-color = ["aul/no-color"]
