[package]
name = "ser_servlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "main"
[[bin]]
path = "src/client.rs"
name = "client"
[dependencies]
wbsl = "0.1.1"
wjp = "1.1.3"
aul = "1.4.1"
whdp = "1.2.0"